docs/apache-airflow-providers-microsoft-psrp/1.0.0/_sources/_api/airflow/providers/microsoft/psrp/operators/psrp/index.rst.txt
:mod:`airflow.providers.microsoft.psrp.operators.psrp`
======================================================

.. py:module:: airflow.providers.microsoft.psrp.operators.psrp


Module Contents
---------------

.. py:class:: PSRPOperator(*, psrp_conn_id: str, command: Optional[str] = None, powershell: Optional[str] = None, **kwargs)

   Bases: :class:`airflow.models.BaseOperator`

   PowerShell Remoting Protocol operator.

   :param psrp_conn_id: connection id
   :type psrp_conn_id: str
   :param command: command to execute on remote host. (templated)
   :type command: str
   :param powershell: powershell to execute on remote host. (templated)
   :type powershell: str

   .. attribute:: template_fields
      :annotation: = ['command', 'powershell']

      

   .. attribute:: template_fields_renderers
      

      

   .. attribute:: ui_color
      :annotation: = #901dd2

      

   
   .. method:: execute(self, context: dict)




